added header part

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <section>
+        <!-- <section>
             <div class="nav-containter">
                 <div class="photos">
                     <img class="small-pic" src="/media/habib/software develop/web8/assignment-01/flower-shop-assignment-01/photos/pngwing 10.png" alt="">
@@ -19,7 +19,16 @@
                     <button class="btn">shop now</button>
                 </div>
             </div>
-        </section>
+        </section> -->
+
+        <div class="container">
+           <div>
+            <h1 class="heading">Let's make beautiful flowers a part of your life.</h1>
+            <p class="para">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <button class="btn">Shop Now</button>
+           </div>
+           <img class="smallflower" src="Flower Asset/pngwing 10.png" alt="">
+        </div>
     </header>
     <main>
 
