featured flowers section done

--- a/index.html
+++ b/index.html
@@ -23,15 +23,30 @@
 
         <div class="container">
            <div>
-            <h1 class="heading">Let's make beautiful flowers a part of your life.</h1>
-            <p class="para">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <h1 class="heading">Let's make <br>beautiful flowers a part of your life.</h1>
+            <p class="para">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout. The point of using Lorem Ipsum is <br>that it has a more-or-less normal distribution of letters.</p>
             <button class="btn">Shop Now</button>
            </div>
            <img class="smallflower" src="Flower Asset/pngwing 10.png" alt="">
         </div>
     </header>
     <main>
-
+        <section class="featured-flowers">
+            <h3 class="name">Our Featured Flowers</h3>
+            <p class="flowers-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </section>
+        <section class="flowers-pics">
+            <div class="flowers-list">
+                <img class="fl-1" src="Flower Asset/pngwing 6.png" alt="">
+                <img class="fl-2" src="Flower Asset/pngwing 5.png" alt="">
+                <img class="fl-3" src="Flower Asset/pngwing 7.png" alt="">
+            </div>
+            <div class="name-flowers">
+                <li>Pink Flower Tree</li>
+                <li>Pink Flower Tree</li>
+                <li>Pink Flower Tree</li>
+            </div>
+        </section>
     </main>
     <footer>
 
