added support section

--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
            <img class="smallflower" src="Flower Asset/pngwing 10.png" alt="">
         </div>
     </header>
+
+    <!-- main section is starting here -->
     <main>
+        <!-- Our Featured Flowers is starting here -->
         <section class="featured-flowers">
             <h3 class="name">Our Featured Flowers</h3>
-            <p class="flowers-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="flowers-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
         </section>
         <section class="flowers-pics">
             <div class="flowers-list">
@@ -42,9 +45,21 @@
                 <img class="fl-3" src="Flower Asset/pngwing 7.png" alt="">
             </div>
             <div class="name-flowers">
-                <li>Pink Flower Tree</li>
-                <li>Pink Flower Tree</li>
-                <li>Pink Flower Tree</li>
+                <li class="border1"> <b>Pink Flower Tree</b></li>
+                <li class="border2"> <b>Pink Flower Tree</b> </li>
+                <li class="border3"> <b>Pink Flower Tree</b> </li>
+            </div>
+        </section>
+        <section class="Support">
+            <div class="support-section">
+                <img src="Flower Asset/Group 57.png" alt="">
+                <img src="Flower Asset/Group 58.png" alt="">
+                <img src="Flower Asset/Group 59.png" alt="">
+            </div>
+            <div class="support-description">
+                <p>Same Day Delivery, Click & Collect.</p>
+                <p class="ds1">Fresh Flowers, Local Growers.</p>
+                <p>24/7 Free Support.</p>
             </div>
         </section>
     </main>
