--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div>
                     <h1 class="size">Hot Deal ! Sale Up To 25% <span class="color">Off</span></h1>
                     <p class="pr-size">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
-                    <button class="btn">Sign Up</button>
+                    <button class="btn" class="center">Sign Up</button>
                 </div>
                 <img src="Flower Asset/pngwing 8.png" alt="">
             </div>
