added insta section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
                 <img src="Flower Asset/pngwing 8.png" alt="">
             </div>
         </section>
+        <section>
+            <div class="insta">
+                <h1 class="size">Instagram</h1>
+                <p class="pr-size">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            </div>
+            <div class="beautiful-flowers">
+                <img class="ful-1" src="Flower Asset/Flower 01.png" alt="">
+                <img  class="ful-2" src="Flower Asset/Rectangle 4.png" alt="">
+                <img class="ful-3" src="Flower Asset/pngwing 5.png" alt="">
+                <img class="ful-4" src="Flower Asset/pngwing 6.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
