correction completion till fifth sectoin done0

--- a/index.html
+++ b/index.html
@@ -37,18 +37,23 @@
                 <li class="border3"> <b>Pink Flower Tree</b> </li>
             </div>
         </section>
-        <section class="Support">
-            <div class="support-section">
-                <img src="Flower Asset/Group 57.png" alt="">
-                <img src="Flower Asset/Group 58.png" alt="">
-                <img src="Flower Asset/Group 59.png" alt="">
-            </div>
-            <div class="support-description">
-                <p>Same Day Delivery, Click & Collect.</p>
-                <p class="ds1">Fresh Flowers, Local Growers.</p>
-                <p>24/7 Free Support.</p>
+        <!-- extra section start -->
+        <section>
+            <div class="supoort-class">
+                <div class="support-section">
+                    <img src="Flower Asset/Group 57.png" alt="">
+                    <img src="Flower Asset/Group 58.png" alt="">
+                    <img src="Flower Asset/Group 59.png" alt="">
+                </div>
+                <div class="support-description">
+                    <p>Same Day Delivery, Click & Collect.</p>
+                    <p class="ds1">Fresh Flowers, Local Growers.</p>
+                    <p>24/7 Free Support.</p>
+                </div>
             </div>
         </section>
+        <!-- extra section end -->
+        <!-- project's fourth section start -->
         <section>
             <div class="secondflower">
                 <div>
@@ -59,6 +64,8 @@
                 <img src="Flower Asset/pngwing 8.png" alt="">
             </div>
         </section>
+        <!-- project's fourth section end -->
+        <!-- project's fifth section start -->
         <section>
             <div class="insta">
                 <h1 class="size">Instagram</h1>
@@ -67,10 +74,24 @@
             <div class="beautiful-flowers">
                 <img class="ful-1" src="Flower Asset/Flower 01.png" alt="">
                 <img  class="ful-2" src="Flower Asset/Rectangle 4.png" alt="">
-                <img class="ful-3" src="Flower Asset/pngwing 5.png" alt="">
-                <img class="ful-4" src="Flower Asset/pngwing 6.png" alt="">
+                <img class="ful-3" src="Flower Asset/Rectangle 5.png" alt="">
+                <img class="ful-4" src="Flower Asset/Rectangle 6.png" alt="">
             </div>
         </section>
+        <!-- project's fifth section end -->
+        <!-- project's section sixth start -->
+        <section>
+            <div>
+                <h1>
+                    Get The Latest Deals
+                </h1>
+                <p>
+                    $30 coupon for first shopping
+                </p>
+                <input type="button" value="Subscribe">
+            </div>
+        </section>
+        <!-- project's section sixth end -->
     </main>
     <footer>
 
