--- a/index.html
+++ b/index.html
@@ -80,15 +80,16 @@
         </section>
         <!-- project's fifth section end -->
         <!-- project's section sixth start -->
-        <section>
-            <div>
-                <h1>
+        <section class="deal-section">
+            <div class="deal-container">
+                <h1 class="deal-title">
                     Get The Latest Deals
                 </h1>
-                <p>
+                <p class="deal-description">
                     $30 coupon for first shopping
                 </p>
-                <input type="button" value="Subscribe">
+                <input class="subs" type="email" name="" id="" placeholder="Enter your email here...">
+                <button class="btn">Subscribe</button>
             </div>
         </section>
         <!-- project's section sixth end -->
