updated the footer section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
         <!-- project's section sixth end -->
     </main>
     <footer>
-
+        <div class="flowershop">
+            <h1 class="shop-head"><span class="color">Flower</span><span class="white">Shop</span></h1>
+            <p class="shop-para">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+        </div>
     </footer>
 </body>
 </html>
