updated the footer and correcting flaws of insta pic

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <div class="flowershop">
             <h1 class="shop-head"><span class="color">Flower</span><span class="white">Shop</span></h1>
             <p class="shop-para">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <p class="copy">@2020-2023, FlowerShop.com. All rights reserved. </p>
         </div>
     </footer>
 </body>
