bonus section wedding flowers updated

--- a/index.html
+++ b/index.html
@@ -37,8 +37,20 @@
                 <li class="border3"> <b>Pink Flower Tree</b> </li>
             </div>
         </section>
+        <!-- bonus part's part -->
+        <section class="wedding">
+            <div>
+                <h1 class="wedding-heading">ESSENCE OF FLOWERS</h1>
+                <p class="wedding-para">*wedding event design with flowers.</p>
+            </div>
+            <div class="wedding-flowers">
+                <img class="wedimg1" src="./Flower Asset/025-naked-cake-with-white-rose-topper.jpg" alt="">
+                <img class="wedimg2" src="./Flower Asset/241606-1600x1030-top-wedding-flowers.jpg" alt="">
+                <img class="wedimg3" src="./Flower Asset/9223f06b-f679-4415-80dd-95ad445521af.webp" alt="">
+            </div>
+        </section>
         <!-- extra section start -->
-        <section>
+        <section class="hossena-kenu">
             <div class="supoort-class">
                 <div class="support-section">
                     <img src="Flower Asset/Group 57.png" alt="">
